cambios en el home para cuponeras

--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -123,19 +123,17 @@
 					<div class="col-sm-6">
 						<div class="card">
 							<div class="card-body">
-								<h5 class="card-title">Cuponera 1</h5>
-								<p class="card-text">With supporting text below as a natural
-									lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Ver mas</a>
+								<h5 class="card-title">Pelotas</h5>
+								<p class="card-text">Deportes con Pelotas</p>
+								<a href="consultaCuponera.html" class="btn btn-primary">Ver mas</a>
 							</div>
 						</div>
 					</div>
 					<div class="col-sm-6">
 						<div class="card">
 							<div class="card-body">
-								<h5 class="card-title">Cuponera 2</h5>
-								<p class="card-text">With supporting text below as a natural
-									lead-in to additional content.</p>
+								<h5 class="card-title">Gimnasia</h5>
+								<p class="card-text">Aeróbica y aparatos</p>
 								<a href="#" class="btn btn-primary">Ver mas</a>
 							</div>
 						</div>
