--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera.html
@@ -100,8 +100,8 @@
     						<p class="card-text"> <b> Costo Total: 10680$</b> </p>
     						<p class="card-text text-secondary"> Fecha de alta: 30/04/2021 </p>
   					</div>
-  						<div class="offset-6 col-8 mb-3">
-  						<button name="submit" type="submit" class="btn btn-primary">Comprar Cuponera</button>
+  						<div class="d-md-flex justify-content-md-end col-12 mb-3">
+  							<button name="submit" type="submit" class="btn btn-primary">Comprar Cuponera</button>
 						</div>
 					</div>
 					</div>
