--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera1.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera1.html
@@ -90,7 +90,7 @@
 								<h5 class="card-title">Pelotas</h5>
 								<p class="card-text">Deportes con Pelota.</p>
 								<div class="d-md-flex justify-content-md-end">
-									<a href="consultaCuponera.html" class="btn btn-primary">Ver más</a>
+									<a href="consultaCuponera.html" class="btn btn-primary">Detalles</a>
 								</div>
 							</div>
 						</div>
@@ -107,7 +107,7 @@
 								<h5 class="card-title">Gimnasia</h5>
 								<p class="card-text">Aeróbica y aparatos.</p>
 								<div class="d-md-flex justify-content-md-end">
-									<a href="#" class="btn btn-primary">Ver más</a>
+									<a href="#" class="btn btn-primary">Detalles</a>
 								</div>
 							</div>
 						</div>
@@ -124,7 +124,7 @@
 								<h5 class="card-title">Músculos</h5>
 								<p class="card-text">Pesas.</p>
 								<div class="d-md-flex justify-content-md-end">
-									<a href="#" class="btn btn-primary">Ver más</a>
+									<a href="#" class="btn btn-primary">Detalles</a>
 								</div>
 							</div>
 						</div>
