--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -70,25 +70,21 @@
 	<main role="main" class="container">
 		<div class="row">
 			<div class="col-6 col-md-4">
-				<ul id="listaActividades" class="list-group my-4">
+				<ul id="listaInstituciones" class="list-group my-4">
 					<li class="list-group-item"><strong>Instituciones
 							Deportivas</strong></li>
 					<li class="list-group-item"><a
-						href="consultaInstitucionDeportiva.html" class="">Telon</a></li>
-					<li class="list-group-item"><a
-						href="consultaInstitucionDeportiva.html" class="">Instituto
-							Natural</a></li>
-					<li class="list-group-item"><a
-						href="consultaInstitucionDeportiva.html" class="">Olympic</a></li>
-					<li class="list-group-item"><a
-						href="consultaInstitucionDeportiva.html" class="">Fuerza Bruta</a></li>
+						href="consultaInstitucion.html" class="">Telon</a></li>
+					<li class="list-group-item">Instituto Natural</li>
+					<li class="list-group-item">Olympic</li>
+					<li class="list-group-item">Fuerza Bruta</li>
 				</ul>
 				<ul id="listaCategorias" class="list-group my-4">
 					<li class="list-group-item"><strong>Categorías</strong></li>
 					<li class="list-group-item">Al aire libre</li>
-					<li class="list-group-item">Fitness</li>
-					<li class="list-group-item">Football</li>
-					<li class="list-group-item">Artes Marciales</li>
+					<li class="list-group-item"><a href="consultaCategoria.html" class="">Deportes</a></li>
+					<li class="list-group-item">Fintess</li>
+					<li class="list-group-item">Gimnasia</li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-8">
