--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -122,7 +122,7 @@
 				</div>
 				<div class="offset-3 col-8 mb-3">
 					<button name="submit" type="submit" class="btn btn-primary">Comprar Cuponera</button>
-					<button name="submit" type="submit" class="btn btn-primary">Registrarse a Clase</button>
+					<a class="btn btn-primary" href="registroDictadoDeClases.html">Registrarse a Clase</a>
 				</div>
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item" role="presentation"><a
@@ -153,7 +153,7 @@
 					</div>
 					<div class="tab-pane fade" id="clases" role="tabpanel"
 						aria-labelledby="clases-tab">
-						<p class="card-text m-3">10/06/2021</p>
+						<p class="card-text m-3"><a href="consultaDictadoDeClases.html">Clase 10/06/2021</a></p>
 					</div>
 				</div>
 			</div>
