sigo con la web

--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
 <head>
-
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="entrenamos.uy">
@@ -38,11 +37,12 @@
 							class="nav-link dropdown-toggle" href="#"
 							id="navbarDropdownCuponera" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Menu</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownCuponera">
-								<a class="dropdown-item" href="#">Alta de Actividad
-									Deportiva</a> <a class="dropdown-item" href="#">Usuarios</a>
-							</div></li>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+								<a class="dropdown-item" href="#">Usuarios</a>
+								<a class="dropdown-item" href="#">Alta de Actividad Deportiva (solo si profe)</a>
+								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta de Dictado de Clase (solo si profe)</a>  
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
