--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -1,19 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="entrenamos.uy">
-<meta name="author" content="mbarrera">
+<meta name="author" content="tpgr03">
 
 <!-- Bootstrap CSS -->
 <link href="./resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="./resources/css/bootstrap-reboot.min.css" rel="stylesheet">
+<link href="./resources/css/bootstrap-grid.min.css" rel="stylesheet">
 <link href="./resources/css/sticky-footer-navbar.css" rel="stylesheet">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 <title>entrenamos.uy</title>
 </head>
@@ -33,19 +31,18 @@
 				<div class="collapse navbar-collapse" id="navbarEntrenamos">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active"><a class="nav-link"
-							href="index.html">Home <span class="sr-only">(current)</span></a>
+							href="home.html">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownCuponera" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Menu (si es
-								profesor)</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownCuponera">
-								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta
-									de Actividad Deportiva</a> <a class="dropdown-item" href="#">Otra
-									cosa que solo pueda el</a>
-							</div></li>
+							id="navbarDropdownMenu" data-toggle="dropdown"
+							aria-haspopup="true" aria-expanded="false">Menu</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+								<a class="dropdown-item" href="#">Usuarios</a>
+								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta de Actividad Deportiva</a>
+								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta de Dictado de Clase</a>  
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
@@ -94,14 +91,14 @@
 						</ol>
 						<div class="carousel-inner">
 							<div class="carousel-item active">
-								<img src="./resources/img/3.jpg" class="d-block w-100" alt="...">
+								<img src="./resources/img/3.jpg" class="d-block" alt="...">
 							</div>
 							<div class="carousel-item">
-								<img src="./resources/img/1.jpg" class="d-block w-100"
+								<img src="./resources/img/1.jpg" class="d-block"
 									alt="Jiu-Jitsu">
 							</div>
 							<div class="carousel-item">
-								<img src="./resources/img/2.jpg" class="d-block w-100" alt="...">
+								<img src="./resources/img/2.jpg" class="d-block" alt="...">
 							</div>
 						</div>
 						<a class="carousel-control-prev" href="#carouselExampleCaptions"
@@ -184,16 +181,8 @@
 
 
 
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
