--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
@@ -1,29 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="entrenamos.uy">
-<meta name="author" content="mbarrera">
+<meta name="author" content="tpgr03">
 
 <!-- Bootstrap CSS -->
 <link href="./resources/css/bootstrap.min.css" rel="stylesheet">
+<link href="./resources/css/bootstrap-reboot.min.css" rel="stylesheet">
+<link href="./resources/css/bootstrap-grid.min.css" rel="stylesheet">
 <link href="./resources/css/sticky-footer-navbar.css" rel="stylesheet">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
-<script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js"
-	type="text/javascript"></script>
-<link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css"
-	rel="stylesheet" type="text/css" />
-
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 <title>entrenamos.uy</title>
 </head>
@@ -43,46 +31,18 @@
 				<div class="collapse navbar-collapse" id="navbarEntrenamos">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active"><a class="nav-link"
-							href="index.html">Home <span class="sr-only">(current)</span></a>
+							href="home.html">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" href="#"
 							id="navbarDropdownCuponera" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Cuponeras</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownCuponera">
-								<a class="dropdown-item" href="#">Comprar</a> <a
-									class="dropdown-item" href="#">Consultar</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownClase" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Clases</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdownClase">
-								<a class="dropdown-item" href="consultaDictadoDeClases.html">Consulta</a>
-								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta</a>
-								<a class="dropdown-item" href="registroDictadoDeClases.html">Registro</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownActividades" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Act. Deportivas</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownActividades">
-								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta</a>
-								<a class="dropdown-item" href="consultaActividadDeportiva.html">Consulta</a>
-							</div></li>
-						<li class="nav-item dropdown"><a
-							class="nav-link dropdown-toggle" href="#"
-							id="navbarDropdownUsuarios" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false">Usuarios</a>
-							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownUsuarios">
-								<a class="dropdown-item" href="#">Consulta</a> <a
-									class="dropdown-item" href="#">Seguir</a> <a
-									class="dropdown-item" href="#">Dejar de seguir</a> <a
-									class="dropdown-item" href="#">Modificar mis datos</a>
-							</div></li>
+							aria-haspopup="true" aria-expanded="false">Menu</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
+								<a class="dropdown-item" href="#">Usuarios</a>
+								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta de Actividad Deportiva</a>
+								<a class="dropdown-item" href="#">Alta de Dictado de Clase</a>  
+							</div>
+						</li>
 					</ul>
 					<form class="form-inline my-2 my-md-0">
 						<input class="form-control" type="text" placeholder="Buscar"
@@ -90,9 +50,17 @@
 					</form>
 				</div>
 			</div>
+
 			<div class="btn-group">
-				<a href="login.html" class="btn btn-light btn-sm">Iniciar Sesion</a>
-				<a href="#" class="btn btn-light btn-sm">Registrarse</a>
+				<a class="btn btn-light btn-sm dropdown-toggle" href="#"
+					id="navbarDropdownUsuario" data-toggle="dropdown"
+					aria-haspopup="true" aria-expanded="false">denis</a>
+				<div class="dropdown-menu dropdown-menu-right"
+					aria-labelledby="navbarDropdownUsuario">
+					<a class="dropdown-item" href="#">Ver mi perfil</a> <a
+						class="dropdown-item" href="#">Modificar mis datos</a> <a
+						class="dropdown-item" href="#">Cerrar sesion</a>
+				</div>
 			</div>
 		</nav>
 
@@ -102,10 +70,11 @@
 	<main role="main" class="container">
 		<div class="row">
 			<div class="col-6 col-md-4">
-				<ul id="listaActividades" class="list-group my-4">
+				<ul id="listaInstituciones" class="list-group my-4">
 					<li class="list-group-item"><strong>Instituciones
 							Deportivas</strong></li>
-					<li class="list-group-item">Telon</li>
+					<li class="list-group-item"><a
+						href="consultaInstitucion.html" class="">Telon</a></li>
 					<li class="list-group-item">Instituto Natural</li>
 					<li class="list-group-item">Olympic</li>
 					<li class="list-group-item">Fuerza Bruta</li>
@@ -113,9 +82,9 @@
 				<ul id="listaCategorias" class="list-group my-4">
 					<li class="list-group-item"><strong>Categorías</strong></li>
 					<li class="list-group-item">Al aire libre</li>
-					<li class="list-group-item">Fitness</li>
-					<li class="list-group-item">Football</li>
-					<li class="list-group-item">Artes Marciales</li>
+					<li class="list-group-item"><a href="consultaCategoria.html" class="">Deportes</a></li>
+					<li class="list-group-item">Fintess</li>
+					<li class="list-group-item">Gimnasia</li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-8">
@@ -225,15 +194,8 @@
         $('#timepicker').timepicker();
   </script>
 
-	<script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
-	<script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-		integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-		integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
