--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="entrenamos.uy">
 <meta name="author" content="tpgr03">
 
@@ -13,9 +11,7 @@
 <link href="./resources/css/bootstrap-reboot.min.css" rel="stylesheet">
 <link href="./resources/css/bootstrap-grid.min.css" rel="stylesheet">
 <link href="./resources/css/sticky-footer-navbar.css" rel="stylesheet">
-<link
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-	rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 <title>entrenamos.uy</title>
 </head>
