--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
@@ -39,8 +39,8 @@
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
 								<a class="dropdown-item" href="#">Usuarios</a>
-								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta de Actividad Deportiva</a>
-								<a class="dropdown-item" href="#">Alta de Dictado de Clase</a>  
+								<a class="dropdown-item" href="#">Alta de Actividad Deportiva (solo si profe)</a>
+								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta de Dictado de Clase (solo si profe)</a>  
 							</div>
 						</li>
 					</ul>
