--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaDictadoDeClases.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaDictadoDeClases.html
@@ -85,9 +85,9 @@
 						<div class="col-8">
 							<select id="institucionDeportiva" name="institucionDeportiva"
 								class="custom-select" required="required">
-								<option value="Instituto Natural">Instituto Natural</option>
+								<option value="Instituto Natural">Telón</option>
 								<option value="Olympic">Olympic</option>
-								<option value="Telón">Telón</option>
+								<option value="Telón">Instituto Natural</option>
 								<option value="Fuerza Bruta">Fuerza Bruta</option>
 							</select>
 						</div>
@@ -97,10 +97,10 @@
 						<div class="col-8">
 							<select id="categoria" name="categoria" class="custom-select"
 								required="required">
-								<option value="deportes de equipo">deportes de equipo</option>
-								<option value="deportes de pelota">deportes de pelota</option>
-								<option value="deportes acuáticos">deportes acuáticos</option>
-								<option value="deportes de tiro">deportes de tiro</option>
+								<option value="deportes de equipo">Al aire libre</option>
+								<option value="deportes de pelota">Deportes</option>
+								<option value="deportes acuáticos">Fitness</option>
+								<option value="deportes de tiro">Gimnasia</option>
 							</select>
 						</div>
 					</div>
@@ -110,9 +110,9 @@
 						<div class="col-8">
 							<select id="actividadDeportiva" name="actividadDeportiva"
 								class="custom-select" required="required">
-								<option value="Basquetbol">Basquetbol</option>
+								<option value="Basquetbol">Voleibol</option>
 								<option value="Atletismo">Atletismo</option>
-								<option value="Voleibol">Voleibol</option>
+								<option value="Voleibol">Basquetbol</option>
 							</select>
 						</div>
 					</div>
@@ -121,9 +121,9 @@
 						<div class="col-8">
 							<select id="actividadDeportiva" name="actividadDeportiva"
 								class="custom-select" required="required">
-								<option value="Basquetbol I">Basquetbol I</option>
-								<option value="Basquetbol II">Basquetbol II</option>
-								<option value="Basquetbol III">Basquetbol III</option>
+								<option value="Basquetbol I">Voleibol</option>
+								<option value="Basquetbol II">Braza</option>
+								<option value="Basquetbol III">Mariposa</option>
 							</select>
 						</div>
 					</div>
@@ -133,15 +133,17 @@
 					<div class="card mb-3" style="max-width: auto;">
 						<div class="row no-gutters">
 							<div class="col-md-4">
-								<img src="./resources/img/Basquetbol1.jpg" width="240"
+								<img src="./resources/img/voleibol1.jpg" width="240"
 									height="160" alt="...">
 							</div>
 							<div class="col-md-8">
 								<div class="card-body">
-									<h5 class="card-title">Basquetbol I</h5>
-									<p class="card-text">This is a wider card with supporting
-										text below as a natural lead-in to additional content. This
-										content is a little bit longer.</p>
+									<h5 class="card-title">Voleibol</h5>
+									<p class="card-text"> <p class="card-text m-3"><a href="consultaActividadDeportiva.html">Ver información de la actividad deportiva</a></p> </p>
+									<p class="card-text"> <p class="card-text m-3"><a href="registroDictadoDeClases.html">Registrarme a la clase</a></p> </p>
+									<p class="card-text"> <p class="card-text m-3"><a href="consultaPerfilUsuario-Profesor.html">Dictada por: denis</a></p> </p>
+									Fecha: 10/06/21   <br> Hora: 19:00
+									
 								</div>
 							</div>
 						</div>
@@ -164,7 +166,7 @@
 	  })
 	</script>
 
-
+	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"></script>
