conexion con todas las cuponeras

--- a/tarea2/website_entrenamos.uy/src/main/webapp/home.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/home.html
@@ -131,7 +131,17 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-sm-12">
+					<table class="table table-sm mt-3 text-right" >
+  							<thead>
+    							<tr>
+     							 <th scope="col"> <a href="consultaCuponera1.html">Ver todas las cuponeras</a></th>
+    							</tr>
+  							</thead>  			
+					</table>
+					</div>
 				</div>
+		
 				<div class="card-group my-4">
 					<div class="card">
 						<img src="./resources/img/a1.jpg" class="card-img-top" alt="...">
