--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaActividadDeportiva.html
@@ -57,9 +57,9 @@
 					aria-haspopup="true" aria-expanded="false">denis</a>
 				<div class="dropdown-menu dropdown-menu-right"
 					aria-labelledby="navbarDropdownUsuario">
-					<a class="dropdown-item" href="#">Ver mi perfil</a> <a
-						class="dropdown-item" href="#">Modificar mis datos</a> <a
-						class="dropdown-item" href="#">Cerrar sesion</a>
+					<a class="dropdown-item" href="consultaPerfilUsuario-Profesor.html">Ver mi perfil</a>
+					<a class="dropdown-item" href="modificarUsuario.html">Modificar mis datos</a>
+					<a class="dropdown-item" href="#">Cerrar sesion</a>
 				</div>
 			</div>
 		</nav>
