--- a/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/altaDictadoDeClases.html
@@ -39,8 +39,8 @@
 							aria-haspopup="true" aria-expanded="false">Menu</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenu">
 								<a class="dropdown-item" href="#">Usuarios</a>
-								<a class="dropdown-item" href="#">Alta de Actividad Deportiva (solo si profe)</a>
-								<a class="dropdown-item" href="altaDictadoDeClases.html">Alta de Dictado de Clase (solo si profe)</a>  
+								<a class="dropdown-item" href="altaActividadDeportiva.html">Alta de Actividad Deportiva (solo si profe)</a>
+								<a class="dropdown-item" href="#">Alta de Dictado de Clase (solo si profe)</a>  
 							</div>
 						</li>
 					</ul>
@@ -57,9 +57,9 @@
 					aria-haspopup="true" aria-expanded="false">denis</a>
 				<div class="dropdown-menu dropdown-menu-right"
 					aria-labelledby="navbarDropdownUsuario">
-					<a class="dropdown-item" href="#">Ver mi perfil</a> <a
-						class="dropdown-item" href="#">Modificar mis datos</a> <a
-						class="dropdown-item" href="#">Cerrar sesion</a>
+					<a class="dropdown-item" href="consultaPerfilUsuario-Profesor.html">Ver mi perfil</a>
+					<a class="dropdown-item" href="modificarUsuario.html">Modificar mis datos</a>
+					<a class="dropdown-item" href="#">Cerrar sesion</a>
 				</div>
 			</div>
 		</nav>
