se agregan conexiones

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera1.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaCuponera1.html
@@ -82,16 +82,19 @@
 				<h2>Cuponeras de actividades deportivas</h2>
 
 				<div class="card mb-3" style="max-width: auto;">
-					<div class="row no-gutters">
+					<div class="row no-gutters">					
 						<div class="col-md-4 text-center">
-							<img src="./resources/img/b1.jpg" class="img-fluid" alt="...">
+							<img src="./resources/img/b1.jpg" alt="..." width="242" height="200">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
 								<h5 class="card-title">Pelotas</h5>
 								<p class="card-text">Deportes con Pelota.</p>
 								<div class="d-md-flex justify-content-md-end">
+									<div class="d-flex flex-column">
 									<a href="consultaCuponera.html" class="btn btn-primary">Detalles</a>
+									<a href=# class="btn btn-primary mt-2" data-toggle="modal" data-target="#comprar">Comprar</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -101,14 +104,17 @@
 				<div class="card mb-3" style="max-width: auto;">
 					<div class="row no-gutters">
 						<div class="col-md-4 text-center">
-							<img src="./resources/img/b2.jpg" class="img-fluid" alt="...">
+							<img src="./resources/img/b2.jpg"  alt="..." width="242" height="200">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
 								<h5 class="card-title">Gimnasia</h5>
 								<p class="card-text">Aeróbica y aparatos.</p>
 								<div class="d-md-flex justify-content-md-end">
-									<a href="#" class="btn btn-primary">Detalles</a>
+									<div class="d-flex flex-column">
+									<a href=# class="btn btn-primary">Detalles</a>
+									<a href=# class="btn btn-primary mt-2" data-toggle="modal" data-target="#comprar">Comprar</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -118,14 +124,17 @@
 				<div class="card mb-3" style="max-width: auto;">
 					<div class="row no-gutters">
 						<div class="col-md-4 text-center">
-							<img src="./resources/img/b3.jpg" class="img-fluid" alt="...">
+							<img src="./resources/img/b3.jpg"  alt="..." width="242" height="200">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
 								<h5 class="card-title">Músculos</h5>
 								<p class="card-text">Pesas.</p>
 								<div class="d-md-flex justify-content-md-end">
-									<a href="#" class="btn btn-primary">Detalles</a>
+									<div class="d-flex flex-column">
+									<a href=# class="btn btn-primary">Detalles</a>
+									<a href=# class="btn btn-primary mt-2" data-toggle="modal" data-target="#comprar">Comprar</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -149,6 +158,47 @@
 				</div>
 			</div>
 		</div>
+		
+		<!-- Modal -->
+<div class="modal fade" id="comprar" tabindex="-1" role="dialog" aria-labelledby="comprarLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form >
+                <div class="modal-header">
+                    <h5 class="modal-title" id="comprarLabel">Confirmar la compra de la cuponera</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+              <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary" data-toggle="modal" data-target="#exito">Confirmar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+		<div class="modal fade" id="exito" tabindex="-1" role="dialog" aria-labelledby="exitoLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <form >
+                <div class="modal-header">
+                    <h5 class="modal-title text-success" id="comprarLabel">La compra fue exitosa</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+              <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+		
+		
+		
+		
 	</main>
 
 	<footer class="footer">
