--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -144,7 +144,7 @@
 					</div>
 					<div class="tab-pane fade" id="cuponeras" role="tabpanel"
 						aria-labelledby="cuponeras-tab">
-						<p class="card-text m-3">Pelota</p>
+						<p class="card-text m-3"><a href="consultaCuponera.html">Pelota</a></p>
 						
 					</div>
 					<div class="tab-pane fade" id="clases" role="tabpanel"
