funciona el index

--- a/tarea2/website_entrenamos.uy/src/main/webapp/index.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>entrenamos.uy</title>
 <!-- Redirige al servlet de home -->
-<meta http-equiv="refresh" content="0;URL=/website_entrenamos.uy/home">
+<meta http-equiv="refresh" content="0;URL=/website_entrenamos.uy/home.html">
 
 </head>
 <body>
