actualizacion de conexiones

--- a/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
+++ b/tarea2/website_entrenamos.uy/src/main/webapp/consultaActividadDeportiva.html
@@ -117,7 +117,7 @@
 					</div>
 				</div>
 				<div class="offset-3 col-8 mb-3">
-					<button name="submit" type="submit" class="btn btn-primary">Comprar Cuponera</button>
+					<a  class="btn btn-primary" href="consultaCuponera1.html">Comprar Cuponera</a>
 					<a class="btn btn-primary" href="registroDictadoDeClases.html">Registrarse a Clase</a>
 				</div>
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
