--- a/tarea2/website_entrenamos.uy/bin/src/main/webapp/consultaInstitucion.html
+++ b/tarea2/website_entrenamos.uy/bin/src/main/webapp/consultaInstitucion.html
@@ -21,7 +21,7 @@
 		<!-- Fixed navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container">
-				<a class="navbar-brand" href="#">Entrenamos.uy</a>
+				<a class="navbar-brand" href="index.html">Entrenamos.uy</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse"
 					data-target="#navbarEntrenamos" aria-controls="navbarEntrenamos"
 					aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
 				<div class="collapse navbar-collapse" id="navbarEntrenamos">
 					<ul class="navbar-nav mr-auto">
 						<li class="nav-item active"><a class="nav-link"
-							href="home.html">Home <span class="sr-only">(current)</span></a>
+							href="index.html">Home <span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" href="#"
